<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal">

    <Button
        android:id="@+id/easy_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_game"
        app:layout_constraintBottom_toTopOf="@id/medium_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
